--- a/create_release/copy_files_config.json
+++ b/create_release/copy_files_config.json
@@ -1,5 +1,4 @@
 {
-    "resultingFolder": "mahjong_solitaire",
     "basePath": "..",
     "files":
         [
@@ -8,5 +7,12 @@
             "libraries/",
             "maps/",
             "manifest.json"
+        ],
+    "extensions":
+        [
+            ".css",
+            ".png",
+            ".js",
+            ".json"
         ]
 }
