--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "Mahjong Solitaire",
-    "version": "1.0",
-    "description": "Mahjong Solitaire",
-    "app": { "launch": { "local_path": "index.html" } },
-    "manifest_version": 2
+    "version": "1.1.0",
+    "description": "Mahjong solitaire game, with two players mode (turn based).",
+    "app": { "background": { "scripts": [ "background.js" ] } },
+    "manifest_version": 2,
+    "permissions": [ "storage" ]
 }
