--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "grunt": "~1.0.1",
         "grunt-contrib-copy": "~1.0.0",
         "grunt-contrib-uglify": "~2.3.0",
+        "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
         "grunt-contrib-cssmin": "~2.0.0",
         "grunt-contrib-clean": "~1.0.0",
         "grunt-processhtml": "~0.4.1",
