--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "name": "mahjong_solitaire",
     "description": "Mahjong solitaire game, with two players mode (turn based).",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "devDependencies": {
-        "grunt": "~1.0.1",
+        "eslint": "~5.12.1",
+        "glob": "^7.1.3",
+        "grunt": "~1.0.3",
+        "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-uglify": "~2.3.0",
-        "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
-        "grunt-contrib-cssmin": "~2.0.0",
-        "grunt-contrib-clean": "~1.0.0",
-        "grunt-processhtml": "~0.4.1",
-        "grunt-eslint": "~19.0.0",
-        "eslint": "~3.19.0"
+        "grunt-contrib-cssmin": "~3.0.0",
+        "grunt-eslint": "~21.0.0",
+        "grunt-processhtml": "~0.4.2",
+        "terser": "~3.14.1"
     }
 }
