--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "grunt-eslint": "~21.0.0",
         "grunt-processhtml": "~0.4.2",
         "terser": "~3.14.1"
+    },
+    "scripts": {
+        "build": "grunt"
     }
 }
