--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "1.3.0",
     "devDependencies": {
         "eslint": "~5.12.1",
+        "express": "^4.16.4",
         "glob": "^7.1.3",
         "grunt": "~1.0.3",
         "grunt-contrib-clean": "~2.0.0",
@@ -14,6 +15,7 @@
         "terser": "~3.14.1"
     },
     "scripts": {
+        "mapEditor": "node map_editor/server.js",
         "build": "grunt"
     }
 }
