--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "Mahjong solitaire game, with two players mode (turn based).",
     "version": "1.3.0",
     "devDependencies": {
+        "body-parser": "^1.18.3",
         "eslint": "~5.12.1",
         "express": "^4.16.4",
         "glob": "^7.1.3",
