Start the conversion to typescript.
- Add 'typescript' to the list of packages.
- Remove 'eslint' from the packages list.
- Rename 'jsconfig.json' to 'tsconfig.json'.
- Rename the script files with the '*.ts' extension.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
         "target": "es2017",
+        "strict": true
     },
     "include": [
-        "js/**/*.js"
+        "scripts/**/*.ts"
     ]
 }
