--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
     "version": "1.3.0",
     "devDependencies": {
         "body-parser": "^1.18.3",
-        "eslint": "~5.12.1",
         "express": "^4.16.4",
         "glob": "^7.1.3",
         "grunt": "~1.0.3",
         "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-copy": "~1.0.0",
         "grunt-contrib-cssmin": "~3.0.0",
-        "grunt-eslint": "~21.0.0",
         "grunt-processhtml": "~0.4.2",
         "http-server": "^0.11.1",
-        "terser": "~3.14.1"
+        "terser": "~3.14.1",
+        "typescript": "^3.3.1"
     },
     "scripts": {
         "dev": "http-server -p 8000",
