--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
         "grunt-contrib-cssmin": "~3.0.0",
         "grunt-processhtml": "~0.4.2",
         "http-server": "^0.11.1",
+        "npm-run-all": "^4.1.5",
         "terser": "~3.14.1",
         "typescript": "^3.3.1"
     },
     "scripts": {
-        "dev": "http-server -p 8000",
+        "dev": "npm-run-all --parallel dev:*",
+        "dev:typescript": "tsc -w",
+        "dev:server": "http-server -p 8000 --silent",
         "mapEditor": "node map_editor/server.js",
         "build": "grunt"
     }
