--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "description": "Mahjong solitaire game, with two players mode (turn based).",
     "version": "1.3.0",
     "devDependencies": {
+        "@types/createjs": "0.0.29",
+        "@types/jquery": "^3.3.29",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "glob": "^7.1.3",
