--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "target": "es2017",
-        "strict": true
+        "strict": true,
+        "module": "es2015"
     },
     "include": [
         "scripts/**/*.ts"
