--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "es2017",
-        "strict": true,
-        "module": "es2015"
+        "module": "es2015",
+        "strict": true
     },
     "include": [
         "scripts/**/*.ts"
