--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "1.3.0",
     "devDependencies": {
         "@types/createjs": "0.0.29",
+        "@types/express": "^4.16.1",
         "@types/jquery": "^3.3.29",
+        "@types/node": "^10.12.21",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "glob": "^7.1.3",
