Run the automatic code formatter on the codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,5 @@
         "module": "es2015",
         "strict": true
     },
-    "include": [
-        "scripts/**/*.ts"
-    ]
+    "include": ["scripts/**/*.ts"]
 }
