--- a/map_editor/static/tsconfig.json
+++ b/map_editor/static/tsconfig.json
@@ -4,7 +4,5 @@
         "module": "es2015",
         "strict": true
     },
-    "include": [
-        "**/*.ts"
-    ]
+    "include": ["**/*.ts"]
 }
