--- a/map_editor/tsconfig.json
+++ b/map_editor/tsconfig.json
@@ -4,7 +4,5 @@
         "module": "commonjs",
         "strict": true
     },
-    "include": [
-        "server.ts"
-    ]
+    "include": ["server.ts"]
 }
