--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     },
     "dependencies": {
         "easeljs": "^1.0.2",
-        "preloadjs": "^1.0.1",
-        "soundjs": "^1.0.1"
+        "preloadjs": "^1.0.1"
     },
     "prettier": {
         "printWidth": 80,
