--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
     "name": "mahjong_solitaire",
     "description": "Mahjong solitaire game, with two players mode (turn based).",
-    "version": "1.3.0",
+    "version": "1.4.0",
+    "packageManager": "npm@10.7.0",
     "devDependencies": {
-        "@types/createjs": "0.0.29",
+        "@types/createjs": "^0.0.32",
         "@types/express": "^4.16.1",
-        "@types/node": "^10.12.24",
+        "@types/node": "^20.14.7",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
-        "glob": "^7.1.3",
-        "grunt": "~1.0.3",
+        "glob": "^10.4.2",
+        "grunt": "^1.6.1",
         "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-cssmin": "~3.0.0",
-        "http-server": "^0.11.1",
+        "grunt-contrib-cssmin": "^5.0.0",
+        "http-server": "^14.1.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "1.16.4",
-        "terser": "~3.16.1",
-        "typescript": "^3.3.3"
+        "prettier": "^3.3.2",
+        "terser": "^5.31.1",
+        "typescript": "^5.5.2"
     },
     "dependencies": {
         "easeljs": "^1.0.2",
@@ -47,7 +48,7 @@
         "map_server:build": "tsc --project ./map_editor/",
         "map_server:run": "node map_editor/server.js",
         "build": "grunt",
-        "formatting:check": "prettier --check \"**/*.{html,css,json,ts}\"",
-        "formatting:run": "prettier --write \"**/*.{html,css,json,ts}\""
+        "format:check": "prettier --check \"**/*.{html,css,json,ts}\"",
+        "format:run": "prettier --write \"**/*.{html,css,json,ts}\""
     }
 }
