--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,20 @@
 name: mahjong
 
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '20.x'
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@master
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: "20.x"
 
-    - run: npm install
-    - run: npm run format:check
-    - run: npm run build
+            - run: npm install
+            - run: npm run format:check
+            - run: npm run lint
+            - run: npm run build
