--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "version": "1.4.0",
     "packageManager": "npm@10.7.0",
     "devDependencies": {
+        "@eslint/js": "^9.5.0",
         "@types/createjs": "^0.0.32",
         "@types/express": "^4.16.1",
         "@types/node": "^20.14.7",
         "body-parser": "^1.18.3",
+        "eslint": "^9.5.0",
         "express": "^4.16.4",
         "glob": "^10.4.2",
+        "globals": "^15.6.0",
         "grunt": "^1.6.1",
         "grunt-contrib-clean": "~2.0.0",
         "grunt-contrib-copy": "~1.0.0",
@@ -18,7 +21,8 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^3.3.2",
         "terser": "^5.31.1",
-        "typescript": "^5.5.2"
+        "typescript": "^5.5.2",
+        "typescript-eslint": "^7.13.1"
     },
     "dependencies": {
         "easeljs": "^1.0.2",
@@ -49,6 +53,7 @@
         "map_server:run": "node map_editor/server.js",
         "build": "grunt",
         "format:check": "prettier --check \"**/*.{html,css,json,ts}\"",
-        "format:run": "prettier --write \"**/*.{html,css,json,ts}\""
+        "format:run": "prettier --write \"**/*.{html,css,json,ts}\"",
+        "lint": "eslint ."
     }
 }
