--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
               with:
                   node-version: "20.x"
 
-            - run: npm install
+            - run: npm install --legacy-peer-deps
             - run: npm run format:check
             - run: npm run lint
             - run: npm run build
